syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.gateway.protos";
//option java_outer_classname = "StreamProto";

package stream;

service Authenticate {

  rpc Register (Request) returns (Reply) {}
  rpc Login (LoginRequest) returns (LoginReply) {}

}

// The request message containing the user's name.
message Request {
  string name = 1;
  string password = 2;
}

// The response message containing the greetings
message Reply {
  string masterip = 1;
}

message LoginRequest {
  string client_ip=1;
  string password=2;
}

message LoginReply {
  string msg=1;
  string token=2;
}