syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.node.protos";
//option java_outer_classname = "StreamProto";

package stream;

service NodeReplication {
  rpc ReplicateFile(ReplicateFileRequest) returns (StatusResponse) {}  // Message from Master Node to replicate given file in case of other node failure
  rpc CreateReplica (stream CreateReplicaRequest) returns (CreateReplicaReply) {}
}

enum Status {
  SUCCESS = 0;
  FAILURE = 1;
}

message ReplicateFileRequest {
  string filename = 1;
  repeated string nodeips = 2;
}

message StatusResponse {
  Status status = 1;
}

// The request message containing the user's name.
message CreateReplicaRequest {
  //  TODO add auth jwt token
  string filename = 1;
  bytes payload = 2;
}

// The response message containing the greetings
message CreateReplicaReply {
  string status = 1;
}